<resources>

    <!-- titles -->
    <string name="app_name">RandomGroup</string>
    <string name="main_options">Main Options</string>
    <string name="app_image">App image</string>
    <string name="infolojo_es">infolojo.es</string>
    <string name="defaultCompetitionName">Random Champions</string>
    <string name="random_option">Random Option</string>
    <string name="random_option_subtitle">Add your own options</string>

    <!-- labels -->
    <string name="enterPlayersNumber">Enter players number</string>
    <string name="enterGroupsNumber">Enter groups number</string>
    <string name="playersConfigurations">Enter players configuration</string>
    <string name="enterPlayersName">Enter players name</string>
    <string name="see_more_at_infolojo_es">See more at <b>infolojo.es</b></string>
    <string name="finish_upper">FINISH !!</string>
    <string name="finish_lower">finish</string>
    <string name="winner_message">The winner of %1$s is</string>


    <!-- inputs -->
    <string name="defaultNumberOfPlayers">4</string>
    <string name="defaultNumberOfGroups">2</string>

    <!-- buttons -->
    <string name="continueButton">Continue</string>
    <string name="sendButton">Send Couples</string>
    <string name="reorderCouples">Reorder Couples</string>
    <string name="changeEmails">Change Emails</string>
    <string name="getRandom">Get Random</string>
    <string name="showCouples">Show Couples</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player_x">Player x</string>
    <string name="players_and_groups_button_text">Make players and groups</string>
    <string name="players_and_groups_button_info">This option creates random groups with players. It can be useful, for example, for a competition with your friends.</string>
    <string name="players_and_groups_button_info_content_description">Show info about players and groups button</string>

    <string name="get_one_random_button_text">Get one option random</string>
    <string name="get_one_random_button_text_info">this option get a random element from a list of elements. It can be useful, for example, for a strange thing or an individual challenge</string>
    <string name="get_one_random_button_text_info_content_description">Show info about Get one option random button</string>

    <string name="secret_couples_button_text">Secret couples (Invisible friend)</string>
    <string name="secret_couples_button_info">This option is to create a list of invisible friends. It can be useful, For example for an invisible friends</string>
    <string name="secret_couples_button_info_content_description">Show info about Secret couples random button</string>


    <!-- Banner action -->
    <string name="infolojo_complete_url">https://www.infolojo.es</string>
    <string name="infolojo_title">Infolojo</string>

    <!-- Dialog-->
    <string name="close_game">Close game ?</string>
    <string name="yes">yes</string>
    <string name="re_run_game_plase">I want to play again</string>
    <string name="no">no</string>

    <!-- Configure players errors -->
    <string name="error_competition_name">Please check the competition name</string>
    <string name="error_number_of_players">Please check number of players</string>
    <string name="error_number_of_players_minus_than_1">We need almost two players</string>
    <string name="error_number_of_groups_are_bigger_than_players">Groups number is bigger than players WTF !!</string>
    <string name="error_unknown">Please check all your inputs</string>

    <!-- Common -->
    <string name="Group">Group</string>
    <string name="init_app">Init Random Group APP</string>
    <string name="init_web_view_activity">Init WebView</string>
    <string name="random_result_is">Random result is:</string>
    <string name="couples">Couples</string>
</resources>
