<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/defaultPadding"
    tools:context=".ui.secretcouples.fragments.FinalSecretCoupleFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/defaultCompetitionName"
        android:textSize="@dimen/defaultTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/defaultPadding"
        android:paddingBottom="@dimen/recyclers_margin"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/playButton"
        style="@style/sendCouples"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sendButton"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/reorderButton"
        app:layout_constraintEnd_toEndOf="@id/reorderButton"
        app:layout_constraintStart_toStartOf="@id/reorderButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reorderButton"
        style="@style/warningBase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reorderCouples"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/changeCouplesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changeCouplesButton"
        style="@style/commonButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp40"
        android:text="@string/changeEmails"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/reorderButton"
        app:layout_constraintStart_toStartOf="@id/reorderButton" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>