<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:paddingHorizontal="@dimen/defaultPadding"
    tools:context=".ui.configureplayersandgroups.fragments.ConfigurePlayersNameFragment">

    <TextView
        android:id="@+id/competitionName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/defaultTitle"
        android:gravity="start"
        android:text="@string/defaultCompetitionName"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/playersName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/enterPlayersName"
        android:textSize="@dimen/defaultLabel"
        app:layout_constraintTop_toBottomOf="@id/competitionName"
        app:layout_constraintStart_toStartOf="@id/competitionName"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dp20"
        android:layout_marginTop="@dimen/defaultPadding"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/playersName"
        app:layout_constraintBottom_toTopOf="@id/play_button"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continueButton"
        style="@style/commonButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/dp60"/>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:visibility="visible"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
