<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/defaultPadding"
    tools:context=".ui.secretcouples.fragments.SecretCoupleFragment">

    <TextView
        android:id="@+id/title"
        style="@style/subStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/random_option"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/random_option_subtitle"
        android:textSize="@dimen/defaultLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/recyclerViewContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/defaultPadding"
        android:layout_marginBottom="@dimen/defaultPadding"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@id/addButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subTitle">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/showCouples"
        style="@style/warningBase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp40"
        android:text="@string/showCouples"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/addButton"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/black"
        android:contentDescription="@null"
        android:src="@drawable/baseline_add_24"
        app:layout_constraintStart_toEndOf="@id/showCouples"
        app:layout_constraintBottom_toBottomOf="@id/sendEmail"
        app:layout_constraintEnd_toStartOf="@id/sendEmail"
        app:layout_constraintTop_toTopOf="@id/sendEmail"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sendEmail"
        style="@style/sendCouples"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp40"
        android:text="@string/sendButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/addButton" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>